gke/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-web
  labels:
    name: api-web
spec:
  type: NodePort
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
    - port: 443
      targetPort: 3000
      protocol: TCP
      name: https
